--- a/electron/app/css/style.css
+++ b/electron/app/css/style.css
@@ -1,4 +1,11 @@
-body {
+.select2-results {
+	max-height: 800px;
+}
+.selectize-dropdown-content {
+	max-height: 800px;
+}
+
+/*body {
 	margin:0;
 }
 
@@ -13,6 +20,7 @@ body {
     border-width: 2px 10px 4px 20px;*/
 	/*position: absolute;*/
 }	
+*/
 
 .sidebar {
 	margin-bottom: 20px;
@@ -24,12 +32,12 @@ body {
 }
 
 .col1 {
-	width: 60%;
+	width: 50%;
 	float : left;
 }
 
 .col2 {
-	width: 40%;
+	width: 50%;
 	float:right;
 }
 
@@ -47,11 +55,11 @@ th, td {
 tr:nth-child(even){background-color: #f2f2f2}
 
 
-select {
+/*select {
   font-family: Cursive;
   height: 100px;
 }
-
+*/
 
 
 div.combobox	{font-family: Tahoma;font-size: 12px}
