--- a/electron/app/css/style.css
+++ b/electron/app/css/style.css
@@ -11,7 +11,7 @@
 
 .container {
 	width: 100%;
-	height: 100%;
+	height: 100%;	
 }
 
 .head {
@@ -20,7 +20,13 @@
     border-width: 2px 10px 4px 20px;*/
 	/*position: absolute;*/
 }	
-*/
+
+.head {
+	height: 350px
+}
+
+
+
 
 .sidebar {
 	margin-bottom: 20px;
@@ -68,6 +74,32 @@ tr:nth-child(even){background-color: #f2f2f2}
   height: 100px;
 }
 */
+
+
+/*div {
+	margin: 10px 1
+}*/
+
+.md-button {
+  padding: 0 6px 0 6px;
+  margin: 6px 8px 6px 8px;
+  min-width: 88px;
+  border-radius: 3px;
+  font-size: 14px;
+  text-align: center;
+  text-transform: uppercase;
+  text-decoration:none;
+  border: none;
+  outline: none;
+}
+.roomSelect {
+	postion:static;
+	margin: 10px 0;
+}
+
+#status {
+	margin: 20px 0;
+}
 
 
 div.combobox	{font-family: Tahoma;font-size: 12px}
