--- a/electron/app/css/style.css
+++ b/electron/app/css/style.css
@@ -108,6 +108,7 @@ tr:nth-child(even){background-color: #f2f2f2}
 	padding: 5px 20px;
 	border:1px solid;
 	border-radius:25px;
+	margin: 50px 0px;
 }
 
 
