--- a/electron/app/css/style.css
+++ b/electron/app/css/style.css
@@ -1,3 +1,63 @@
+.container body {
+  padding: 20px; }
+
+.container h4 {
+  margin: 10px 0; }
+
+.container md-progress-linear {
+  padding-top: 10px;
+  margin-bottom: 20px; }
+
+.container #loaders > md-switch {
+  margin: 0;
+  margin-left: 10px;
+  margin-top: -10px; }
+
+.container #loaders > h5 {
+  margin-top: 0; }
+
+.container #loaders > p {
+  margin-right: 20px;
+  margin-bottom: 24px; }
+
+.container p.small {
+  font-size: 0.8em;
+  margin-top: -18px; }
+
+.container hr {
+  width: 100%;
+  margin-top: 2px;
+  border-color: rgba(221, 221, 177, 0.1); }
+
+.container p.small > code {
+  font-size: 0.8em; }
+
+.container .visible {
+  opacity: 0;
+  border: 2px solid white !important; }
+
+.container .statusBox {
+  display: block;
+  position: relative;
+  margin-top: 5px;
+  width: 100%;
+  border: 2px solid #aad1f9;
+  transition: opacity  0.1s linear;
+  background-color: rgba(255, 235, 169, 0.25);
+  }
+
+.container .bottom-block {
+  display: block;
+  position: relative;
+  height: 40px;
+  width: 100%; }
+
+.container .bottom-block > span {
+  display: inline-block;
+  margin-left: 10px;
+  padding: 8px;
+  font-size: 1.1em; }
+
 .select2-results {
 	max-height: 800px;
 }
@@ -102,13 +162,13 @@ tr:nth-child(even){background-color: #f2f2f2}
 	
 }
 
-.statusBox {
+/*.statusBox {
 	background-color: #3f51b5;
 	color: #dfebf8;	
 	padding: 5px 20px;
 	border:1px solid;
 	border-radius:25px;
-}
+}*/
 
 
 div.combobox	{font-family: Tahoma;font-size: 12px}
