--- a/electron/app/css/style.css
+++ b/electron/app/css/style.css
@@ -151,16 +151,16 @@ tr:nth-child(even){background-color: #f2f2f2}
 }
 .roomSelect {
 	postion:static;
-	margin: 10px 0;
+	margin: 30px 0;
 }
 
 #status {
-	margin: 40px 0;
+	margin: 100px 0;
 	
 }
 
 .operation {
-	margin-top: 50px 0;
+	margin-top: 150px;
 }
 
 /*.statusBox {
